feat(config): 配置eslint，prettierrc规则

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,15 @@
   "trailingComma": "all",
   "proseWrap": "never",
   "overrides": [{ "files": ".prettierrc", "options": { "parser": "json" } }],
-  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-packagejson"]
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-packagejson"],
+  "importOrder": [
+    "react",
+    "^react-.*$",
+    "<THIRD_PARTY_MODULES>",
+    "^@/(.*)$",
+    "^\\.(.*)(?<!\\.less)$",
+    "(?<=\\.less)$"
+  ],
+  "importOrderSeparation": false,
+  "importOrderSortSpecifiers": true
 }
