--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@ant-design/icons": "^5.0.1",
     "@ant-design/pro-components": "^2.4.4",
     "@umijs/max": "^4.1.2",
-    "antd": "^5.4.0"
+    "antd": "^5.4.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.18",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.7",
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-packagejson": "^2.4.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.0.3"
   }
 }
